# scorekit

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  docker.yml  pages.yml  release.yml
docs/: narrative-brief.md  roadmap.md
docs-site/: book.toml
docs-site/src/: SUMMARY.md  agent-skill.md  architecture.md  best-practices.md  commands.md  installation.md  introduction.md  machine-interface.md  profiles.md  quick-start.md  rendering.md  scene-protocol.md  sound-library.md
docs/research/: open-sample-libraries.md
examples/briefs/: dunes-v4.yaml
examples/grammars/: grief.yaml
examples/profiles/: vsco2-ce.yaml  vsco2-vcsl.yaml
examples/scenes/: ballad.yaml  chiptune.yaml  dance.yaml  dunes-v4.yaml  dunes.yaml  elegy.yaml  epic.yaml  forest.yaml  forest_suite.yaml
scripts/: build_sfizz.sh  fetch_assets.sh  fetch_default_soundfont.sh
skills/scorekit/: SKILL.md  reference.md
skills/scorekit/examples/: exile-in-the-dunes-v2.yaml  exile-in-the-dunes.yaml  narrative-film-score.md
src/: audio.rs  composer.rs  diff.rs  doctor.rs  error.rs  grammar.rs  instrument.rs  main.rs  mcp.rs  midi.rs  pipeline.rs  profile.rs  profile_check.rs  resolver.rs  schema.rs  soundfont.rs  texture.rs  tools.rs
tests/: cli.rs
tests/golden/: forest.mid
