[package]
name = "scorekit"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
hound = "3.5.1"
midly = "0.5.3"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.2"
midly = "0.5.3"
predicates = "3.1.4"
tempfile = "3.27.0"
